new visual changes

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -28,8 +28,8 @@
 
           <br>
         </div>
-        <div class="tx-hero__content" style="padding-right: 80px; padding-left: 50px;">
-         <img src="images/zerynth-platform.png" draggable="false">
+        <div class="tx-hero__content" style="margin-top: 0px;">
+        <img style="width: 80%; float: right;" src="images/zerynth-platform.png" draggable="false">
         </div>
      <!--     <div class="tx-hero__content" style="padding-right: 20px;">
          <img src="images/update2.png" draggable="false">
@@ -60,14 +60,14 @@
         </div>
          <div class="tx-hero__content blocks" style="margin: auto; text-align: center;">
           <h3 style="font-size: 20px; text-align: center;">APIs and Reference</h3>
-          <img style="width: 130px; display: block; margin: auto;" src="images/supported-devices.png" draggable="false">
+          <img style="width: 130px; display: block; margin: auto;" src="images/apis-and-references-icon.png" draggable="false">
           <a style="font-size: 15px; margin-right: 0px;" href="reference/" class="md-button md-button--primary">
             Learn more
           </a>
         </div>
          <div class="tx-hero__content blocks" style="margin: auto; text-align: center;">
           <h3 style="font-size: 20px; text-align: center;">Tutorials and Demos</h3>
-          <img style="width: 130px; display: block; margin: auto;" src="images/demos.jpg" draggable="false">
+          <img style="width: 130px; display: block; margin: auto;" src="images/tutorials-and-demos-icon.png" draggable="false">
           <a style="font-size: 15px; margin-right: 0px;" href="tutorials/" class="md-button md-button--primary">
             Learn more
           </a>
