fixed links, moved tutorials section, fixed some typos in some tutorials

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -16,7 +16,7 @@
           <p>Zerynth is a complete software-hardware platform, it simplifies the development of IoT products by offering modular industrial development boards, production-ready SoC modules and easy-to-use Python enabled development environment.
 </p>
           <!-- <p>{{ config.site_description }}</p> -->
-          <a href="gettingstarted/" title="Getting Started" class="md-button md-button--primary">
+          <a href="gettingstarted/ZM1-DB/" title="Getting Started" class="md-button md-button--primary">
             Let's start!
           </a>
           <a href="https://www.zerynth.com/zsdk/" class="md-button md-button--secondary" target="_blank">
@@ -68,7 +68,7 @@
          <div class="tx-hero__content blocks" style="margin: auto; text-align: center;">
           <h3 style="font-size: 20px; text-align: center;">Tutorials and Demos</h3>
           <img style="width: 130px; display: block; margin: auto;" src="images/tutorials-and-demos-icon.png" draggable="false">
-          <a style="font-size: 15px; margin-right: 0px;" href="tutorials/" class="md-button md-button--primary">
+          <a style="font-size: 15px; margin-right: 0px;" href="tutorials/zm1-db/exp-connect-example/" class="md-button md-button--primary">
             Learn more
           </a>
         </div>
