Company name as SpA
(cherry picked from commit f4c6f7c750a3bbf39c1777bb415745b7f60c5558)

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -156,7 +156,7 @@
 </div>
   
     <div class="md-copyright__highlight">
-      ©2015 - 2022 Zerynth srl, Pisa, Italy | P.I. e C.F. 02188290502 | <a style="color: black!important;" target="_blank" href="https://www.zerynth.com/website-terms">Website Terms</a> | <a style="color: black!important;" target="_blank" href="https://www.zerynth.com/privacy">Privacy Policy</a> | <a style="color: black!important;" target="_blank" href="https://www.zerynth.com/license">License</a> | <a style="color: black!important;" target="_blank" href="https://www.zerynth.com/terms-license">Terms &amp; EULA</a>
+      ©2015 - 2022 Zerynth SpA, Pisa, Italy | P.I. e C.F. 02188290502 | <a style="color: black!important;" target="_blank" href="https://www.zerynth.com/website-terms">Website Terms</a> | <a style="color: black!important;" target="_blank" href="https://www.zerynth.com/privacy">Privacy Policy</a> | <a style="color: black!important;" target="_blank" href="https://www.zerynth.com/license">License</a> | <a style="color: black!important;" target="_blank" href="https://www.zerynth.com/terms-license">Terms &amp; EULA</a>
     </div>
   
   
